infra/envs/stage/sg.tf
                                            #########################
                                            #         ALB SG        #
                                            #########################

resource "aws_security_group" "alb_sg" {
  name        = "alb-sg"
  description = "Allow HTTP"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

                                      #########################
                                      #         ECS SG        #
                                      #########################

resource "aws_security_group" "ecs_sg" {
  name        = "ecs-sg"
  description = "Allow traffic for ALB"
  vpc_id      = module.vpc.vpc_id

  ingress {   
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

                                       ########################
                                       #        RDS SG        #
                                       ########################

resource "aws_security_group" "rds_sg" {
  name        = "rds-sg"
  description = "Allow ECS to access RDS"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
